trunk/Archive2/46/f2f73afd183771/output
main.cpp:29:53: error: expected expression
    std::cout << devices[0].getInfo<CL_DEVICE_NAME>() << std::endl;
                                                    ^
1 error generated.
